Updated api docs \n TODO: create interfaces for traits, and create UML model out of it
