# docs/api.yaml
@@ -9,9 +9,9 @@ info:
 host: localhost:8080
 # array of all schemes that your API supports
 schemes:
-  - https
+  - http
 # will be prefixed to all paths
-basePath: /
+basePath: /api
 produces:
   - application/json
 paths:
@@ -61,21 +61,32 @@ paths:
           description: "Allows to recover the runs according to their status such as : [reserved, finish, current]. Example : /runs?status=finish,current"
           required: false
           type: string
+
         - name: sortBy
           in: query
-          description: "Allows to order the runs directly from query. Multiple fields and order can be supplied (seperated by ','). Example: /runs?sortBy=planned_at DESC, status ASC"
+          description: "Allows to order the runs directly from query. Multiple fields and order can be supplied (seperated by ','). Example: /runs?sortBy=planned_at DESC,status ASC"
           required: false
           type: string
-        - name: between
-          in: query
-          description: "Retrieves run that have planned_at between a certain time frame"
-          required: false
-          type: date
+
+        # - name: between
+        #   in: query
+        #   description:
+        #     Allows querying between time periods. Comma seperated values.
+        #     MAX 2 allowed
+        #     /runs?between=2017-06-08,2017-06-09
+        #   required: false
+        #   type: array
+        #   items:
+        #     type: date
+        #   collectionFormat: csv
+        #   maxItems: 2
+
         - name: actif
           in: query
           required: false
           type: boolean
           description: "Filters run that are already gone and finished"
+
         - name: finished
           in: query
           required: false
@@ -307,31 +318,74 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+
+  /groups:
+    get:
+      summary: Return all the groups
+      description: Return all the groups
+      responses:
+        200:
+          description: An array of groups
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Group'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
+  /groups/{id}/:
+    patch:
+      summary: Update a group
+      description: Update a group data, and it's associated user
+      parameters:
+        - name: id
+          in: path
+          description: Unique identifier of the run
+          required: true
+          type: number
+
+        - name: user
+          in: body
+          description:
+            ID of user. Changes the group of the user to the group {id}
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: The modified group
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Group'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
   /schedules:
     get:
       summary: Returns all the schdules
       description: Allows you to get the schedule of everybody
-    parameters:
-      - name: between
-        in: query
-        description: "Allows querying between time periods. Comma seperated values. MAX 2 allowed /schedules?between=2017-06-08,2017-06-09"
-        required: false
-        type: array
-        itesm:
-          type: date
-        collectionFormat: csv
-        maxItems: 2
-    responses:
-      200:
-        description: An array of schdules
-        schema:
-          type: array
-          items:
-            $ref: '#/definitions/Schedule'
-      default:
-        description: Unexpected error
-        schema:
-          $ref: '#/definitions/Error'
+      parameters:
+        - name: between
+          in: query
+          description: "Allows querying between time periods. Comma seperated values. MAX 2 allowed /schedules?between=2017-06-08,2017-06-09"
+          required: false
+          type: string
+      responses:
+        200:
+          description: An array of schdules
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Schedule'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
 
 definitions:
   Schedule:
@@ -341,11 +395,11 @@ definitions:
         description: Unique identifier (PK)
         type: integer
       start_time:
-        description: start of schedule
-        type: dateTime
+        description: start of schedule (date time)
+        type: string
       end_time:
-        description: end of schedule
-        type: dateTime
+        description: end of schedule (date time)
+        type: string
   Group:
     type: object
     properties:
@@ -467,14 +521,6 @@ definitions:
         items:
           $ref: '#/definitions/Runners'
 
-  Waypoint:
-    type: object
-    properties:
-      nickname:
-        type: string
-        description: ""
-      geocoder:
-        $ref: '#/definitions/Geocoder'
 
   Runners:
     type: object
